RESOLVED FIXED266612
[UIAsyncTextInput] Edit menu no longer appears after selecting text in Books
https://bugs.webkit.org/show_bug.cgi?id=266612
Summary [UIAsyncTextInput] Edit menu no longer appears after selecting text in Books
Wenson Hsieh
Reported 2023-12-18 18:25:43 PST
Attachments
Wenson Hsieh
Comment 1 2023-12-18 18:30:29 PST
EWS
Comment 2 2023-12-18 21:28:45 PST
Committed 272249@main (b3d60d3c58c6): <https://commits.webkit.org/272249@main> Reviewed commits have been landed. Closing PR #22005 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.