[UIAsyncTextInput] Edit menu no longer appears after selecting text in Books https://bugs.webkit.org/show_bug.cgi?id=266612 rdar://119843215

Reviewed by Megan Gardner.

Disable async text input by default in Books for the time being, until Books moves off of
`UIWKInteractionViewProtocol` in rdar://119836700.

* Source/WebKit/Shared/ios/WebPreferencesDefaultValuesIOS.mm:
(WebKit::defaultUseAsyncUIKitInteractions):

Canonical link: https://commits.webkit.org/272249@main